--- a/sass/views/_heatmap.scss
+++ b/sass/views/_heatmap.scss
@@ -13,13 +13,14 @@
   }
 
   @media (max-width: 450px) {
-    margin-left: -30%;
-    transform: scale(.61);
+    margin-left: -29%;
+    transform: scale(.62);
   }
 
+  // OnePlus etc.
   @media (max-width: 420px) {
-    margin-left: -40%;
-    transform: scale(.55);
+    margin-left: -38%;
+    transform: scale(.58);
   }
 
   @media (max-width: 390px) {
